gitops/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: solidarytech
  labels:
    name: solidarytech
    project: solidarytech
    managed-by: argocd
